--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.2.6",
+    "google-auth-library": "^8.5.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
